# wolf_ism8

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  changelog.md  pyproject.toml  runtests.py  setup.py  testISM8.py  umstzeun1.xlsx
.github/workflows/: publish-to-pypi.yml
tests/: test_ISM8.py  test_dynamic_stuff.py  test_static_stuff.py
wolf_ism8/: __init__.py  ism8.py  ism8_constants.py  ism8_helper_functions.py
wolf_ism8.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wolf_ism8/ism8/: ism8.py
