[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="wolf_ism8"
version="3.3.1"
description="Write and read data from wolf heating system via ISM8"
readme = "README.md"
authors = [{ name = "marcschmiedchen", email = "marc.schmiedchen@protonmail.com" }]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",   
]
keywords = ["Home Assistant", "Wolf", "HVAC"]
dependencies = ["asyncio"]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/marcschmiedchen/wolf_ism8"
Issues = "https://github.com/marcschmiedchen/wolf_ism8/issues"