[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="wolf_ism8"
dynamic = ["version"]
description="Write and read data from wolf heating system via ISM8"
readme = "README.md"
authors = [{ name = "marcschmiedchen", email = "marc.schmiedchen@protonmail.com" }]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",   
]
keywords = ["Home Assistant", "Wolf", "HVAC"]
dependencies = ["asyncio"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "codespell",
    "pytest",
]

[project.urls]
Repository = "https://github.com/marcschmiedchen/wolf_ism8"
Issues = "https://github.com/marcschmiedchen/wolf_ism8/issues"

[tool.setuptools.dynamic]
version = {attr = "wolf_ism8.__version__"}

[tool.pytest.ini_options]
pythonpath = "."
log_cli = 'True'
log_cli_level="DEBUG"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["wolf_ism8"]

[tool.codespell]
skip = "./.git,./.venv,./.pytest_cache,./wolf_ism8.egg-info"
ignore-words-list = "nbr"